# refined-extra

./: README.md  refined-extra.cabal  stack.yaml
benchmarks/: Bench.hs
executables/: Main.hs
sources/Refined/: Extra.hs  Fraction.hs  Internal.hs  Main.hs
tests/: DocTest.hs
tests/Refined/: Test.hs
